# NBT

./: .gitignore  CMakeLists.txt  main.cpp
include/: CMakeLists.txt  Diagnostics.h  GalaxyInitializer.h  Hdf5SnapshotWriter.h  OctTree.h  Particle.h  fVector3.h
src/: CMakeLists.txt  Diagnostics.cpp  GalaxyInitializer.cpp  Hdf5SnapshotWriter.cpp  OctTree.cpp  Particle.cpp  Physics.cpp  fVector3.cpp
tools/: plot_energy.py  plot_morphology.py  plot_system_3d.py
